# DASHMONEY

./: .gitignore
backend/: alembic.ini  arbo_ap2p.txt  arbo_app.txt  dashmoney_prices_patch_v2.diff  pyproject.toml
backend/app/: db.py  settings.py
backend/app/api/: deps.py  main.py  page_account_transactions.py  page_tableau_transactions.py  site.py
backend/app/domain/: account.py  asset.py  instrument.py  liability.py  money.py  portfolio.py  price_point.py  signed_money.py  trade.py  transaction.py
backend/app/engine/: account_balance.py  account_timeseries.py  budget.py  net_worth.py  net_worth_full.py  portfolio_positions.py  portfolio_value.py  running_balance.py  trade_query.py
backend/app/identity/: defaults.py
backend/app/providers/: coingecko_provider.py  stooq_provider.py
backend/app/repositories/: account_repository.py  in_memory_transaction_repository.py  instrument_repository.py  json_account_repository.py  json_instrument_repository.py  json_portfolio_repository.py  jsonl_portfolio_snapshot_repository.py  jsonl_price_repository.py  jsonl_trade_repository.py  jsonl_transaction_repository.py  portfolio_repository.py  portfolio_snapshot_repository.py  price_repository.py  sql_account_repository.py  sql_identity_models.py  sql_instrument_repository.py  sql_portfolio_repository.py  sql_portfolio_snapshot_repository.py  sql_price_repository.py  trade_repository.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: migrate_prices_jsonl_to_db.py  migrate_transactions_kind.py  update_prices.py
backend/tests/: test_account_timeseries.py  test_health.py
(+46 files in other folders)
